# aurora-client

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
.github/workflows/scripts/: build-deps
src/client/: CMakeLists.txt  Liri1AuroraClientDependencies.cmake.in  Liri1AuroraClientMacros.cmake  extsessionlocksurfacev1.cpp  extsessionlocksurfacev1.h  extsessionlocksurfacev1_p.h  liricolorpickerv1.cpp  liricolorpickerv1.h  liricolorpickerv1_p.h  lirilockscreenv1.cpp  lirilockscreenv1.h  lirilockscreenv1_p.h  lirimodalv1.cpp  lirimodalv1.h  lirimodalv1_p.h  lirishellv1.cpp  lirishellv1.h  lirishellv1_p.h  utils_p.h  wlrexportdmabufv1.cpp  wlrexportdmabufv1.h  wlrexportdmabufv1_p.h  wlrforeigntoplevelmanagementv1.cpp  wlrforeigntoplevelmanagementv1.h  wlrforeigntoplevelmanagementv1_p.h  wlrlayersurfacev1.cpp  wlrlayersurfacev1.h  wlrlayersurfacev1_p.h  wlroutputmanagementv1.cpp  wlroutputmanagementv1.h  wlroutputmanagementv1_p.h  wlrscreencopyv1.cpp  wlrscreencopyv1.h  wlrscreencopyv1_p.h
src/imports/client/: CMakeLists.txt  extsessionlocksurfacev1qml.cpp  extsessionlocksurfacev1qml.h  lirishortcutqml.cpp  lirishortcutqml.h  plugin.cpp  qmldir  wlrlayersurfacev1qml.h
tests/auto/client/: CMakeLists.txt
